<resources>
    <string name="app_name">mehany</string>
    <string name="main1">Welcome to the Professional application</string>
    <string name="main2">Are you a teacher or a technician or looking for both</string>
    <string name="main3">Sign up for what suits you</string>
    <string name="main4">Teacher</string>
    <string name="main5">Technical</string>
    <string name="main6">User</string>
    <string name="user_name">email or username</string>
    <string name="password">Password</string>
    <string name="did_you_forget_the_password">Forget password ...?</string>
    <string name="login">Login</string>
    <string name="first_visit_register">Registration is this your first visit?</string>
    <string name="gc">New registration</string>
    <string name="loginas">Login as user</string>
    <string name="reg1">Register with us now</string>
    <string name="reg2">Firstname</string>
    <string name="reg3">Lastname</string>
    <string name="reg4">Username</string>
    <string name="reg5">Email</string>
    <string name="reg6">Phonenumber</string>
    <string name="reg7">Password</string>
    <string name="sendorder">Phase</string>
    <string name="sendorder1">Type of material</string>
    <string name="sendorder2">Request Now</string>
    <string name="sendorder3">Type of service</string>
    <string name="sendorder4">Task Details</string>
    <string name="sendorder5">"Your request was successfully sent  "</string>
    <string name="sendorder6">Keep your order in my requests</string>
    <string name="preg11">Registration</string>
    <string name="preg12">Registration</string>
    <string name="sendorder7">Searching....</string>
    <string name="sendorder8">View</string>
    <string name="loginasw">Login as worker</string>
    <string name="loginte">Login as teacher</string>
    <string name="wreg1">Next</string>
    <string name="wreg2">Complate data</string>
    <string name="wreg3">Task type</string>
    <string name="reg12">Please check your contact details</string>
    <string name="reg13">So we can communicate with you</string>
    <string name="forgett">Password Reset</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pemail">Put your e-mail here</string>
    <string name="che">Loading data</string>
    <string name="wait">please wait</string>
    <string name="inte">Make sure your Internet connection</string>
    <string name="tr">Complete the empty fields</string>
    <string name="trr">Make sure your e-mail is correct</string>
    <string name="confirm1">Welcome,</string>
    <string name="confirm2">Wait for the activation of the administration and then</string>
    <string name="confirm3">Professional gives you</string>
    <string name="confirm4">Programs after the free operations end on you</string>
    <string name="confirm5">To communicate with the administration to take other operations</string>
    <string name="confirm6">Login</string>
    <string name="confirm7">free operations to use</string>
    <string name="photo">Photos</string>
    <string name="addphoto">Add new photo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="menu1">My orders</string>
    <string name="menu2">Settings</string>
    <string name="menu3">Contact us</string>
    <string name="menu4">About application</string>
    <string name="menu5">"Usage Policy  "</string>
    <string name="menu6">Share of application</string>
    <string name="setting1">Change language</string>
    <string name="setting2">Logout</string>
    <string name="plz_select_lang">Please select language</string>
    <string name="edit1">Edit profile</string>
    <string name="edit2">Save</string>
    <string name="edit3">Edit password</string>
    <string name="about2">Design and develop by atiaf company</string>
    <string name="we">Welcome to the Professional application</string>
    <string name="cont1">To contact us and inquire about</string>
    <string name="cont2">On Email or call</string>
    <string name="more1">Operations available</string>
    <string name="more2">Shipping new operations</string>
    <string name="more3">Status</string>
    <string name="more4">Available</string>
    <string name="more5">Busy</string>
    <string name="more6">Application language</string>
    <string name="more7">عربى</string>
    <string name="more8">English</string>
    <string name="charage1">Price :</string>
    <string name="charage2">Operation number</string>
    <string name="charage3">After you see the packages please check in one</string>
    <string name="charage4">the following bank accounts and after deposit connect with management</string>
    <string name="order1">My requests</string>
    <string name="order2">Current</string>
    <string name="order3">Previous</string>
    <string name="order4">Order number</string>
    <string name="order5">Date :</string>
    <string name="order6">Location :</string>
    <string name="order7">Order type :</string>
    <string name="order8">Stage :</string>
    <string name="order9">Subject :</string>
    <string name="order10">Service type :</string>
    <string name="order11">Cancell order</string>
    <string name="detailsorder1">Current order</string>
    <string name="detailsorder2">Some of technicals recieve your order</string>
    <string name="detailsorder22">Some of teachers recieve your order</string>
    <string name="detailsorder3">View</string>
    <string name="detailsorder4">KM</string>
    <string name="detailsorder5">Name :</string>
    <string name="detailsorder6">Welcome</string>
    <string name="detailsorder7">Some of profile picture</string>
    <string name="detailsorder8">Accept</string>
    <string name="detailsorder9">On your way</string>
    <string name="detailsorder10">Professional Choice</string>
    <string name="detailsorder100">Teacher Choice</string>
    <string name="detailsorder11">Technical arriave</string>
    <string name="detailsorder12">After end task rate technical</string>
    <string name="detailsorder111">Teacher arriave</string>
    <string name="detailsorder121">After end task rate</string>
    <string name="detailsorder13">Task has been successfully</string>
    <string name="detailsorder14">Rating</string>
    <string name="detailsorder15">Arriave time</string>
    <string name="detailsorder16">Quality of Service</string>
    <string name="detailsorder17">Send</string>
    <string name="worknot1">Accepted from</string>
    <string name="worknot2">Task Details :</string>
    <string name="worknot3">Task started</string>
    <string name="worknot4">My dear technician, the client has chosen another technician</string>
    <string name="worknot5">in task</string>
    <string name="worknot6">It\'s fine</string>
    <string name="worknot7">My dear teacher, the client has chosen another technician</string>
    <string name="workdetails1">New order</string>
    <string name="workdetails2">Ok</string>
    <string name="workdetails3">Cancel</string>
    <string name="workerorder1">Arriave me</string>
    <string name="workerorder2">Cancel task</string>
    <string name="workerorder3">I got to the client</string>
    <string name="workerorder4">Mission completed</string>
    <string name="per">Task number :</string>
    <string name="per1">Task has been successfully</string>
    <string name="lastorder">Last order</string>
    <string name="edit">Edit password</string>
    <string name="save">Save</string>
    <string name="newpass">New password</string>
    <string name="cnewpass">Confirm New Password</string>
    <string name="cpa">Make sure the passwords are identical</string>
    <string name="ccpa">Make sure the password is correct</string>
    <string name="adds">Add stage</string>
    <string name="adds1">Add subject</string>
    <string name="dialog1">Dear teacher your account has been stopped</string>
    <string name="dialog2">Dear technical your account has been stopped</string>
    <string name="dialog3">Your account has been suspended because of the exhaustion of shipments so you can work again</string>
    <string name="dialog4">View Packages</string>
    <string name="selloc">Select your location</string>
    <string name="delete">Delete</string>
    <string name="edit_subject_stage">Delete subject and stage</string>
    <string name="plz_select_subject">Please select subject</string>
    <string name="lang">en</string>
    <string name="psnotenabled">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="gpssettings">GPS  settings</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="plz_enable_gps">please enable gps</string>
    <string name="other_services">Other Services</string>
    <string name="choose_services">Choose Service</string>
    <string name="more_login">Other</string>
    <string name="other_login">Other Login</string>
    <string name="provider_txt">Provider</string>
    <string name="menu_place_reservation">Reserve a stadium</string>
    <string name="menu_create_own_team">Build Own Team</string>
    <string name="no_data_found">"No Data Found "</string>
    <string name="all_places">All Stadiums</string>
    <string name="place_title">Place Title</string>
    <string name="place_name">Name</string>
    <string name="address">Address</string>
    <string name="note">Notes</string>
    <string name="view_coordinates">View Coordinates</string>
    <string name="book_now">Book Now</string>
    <string name="name_txt">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="select_date">Select Date</string>
    <string name="number_players">Players Number</string>
    <string name="number_hours">Reservation Hour</string>
    <string name="stadium_here">stadium is here</string>
    <string name="stadium_details">Stadium Details</string>
    <string name="all_teams">All Teams</string>
    <string name="team_details">Team Details</string>
    <string name="join_now">Join Now</string>
    <string name="team_joiners">* Team Members</string>
    <string name="no_members">No Members Joins</string>
    <string name="create_team">Create New Team</string>
    <string name="user_is_joined">You already joined to this team</string>
    <string name="my_teams">My Teams</string>
    <string name="joined_team">Joined</string>
    <string name="enter_form_data">Enter Following Data</string>

</resources>
