<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linvis"
    android:visibility="gone"
    android:background="#99000000"
    >
<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"/>
    <TextView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_notifications_1"/>
    <atiaf.mehany.Customecalss.TextViewWithFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/color_white"
        android:textSize="18sp"
        android:text="@string/confirm1"
        />
    <atiaf.mehany.Customecalss.TextViewWithFont
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_white"
        android:textSize="14sp"
        />
    <atiaf.mehany.Customecalss.TextViewWithFont
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="16sp"
        android:text="@string/confirm2"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:textSize="16sp">


        <atiaf.mehany.Customecalss.TextViewWithFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/confirm3"
            android:textColor="@color/color_white"
            android:textSize="16sp" />

        <atiaf.mehany.Customecalss.TextViewWithFont
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="3"
            android:textColor="@color/color_white"
            android:textSize="14sp" />

        <atiaf.mehany.Customecalss.TextViewWithFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/confirm7"
            android:textColor="@color/color_white"
            android:textSize="16sp" />
    </LinearLayout>

    <atiaf.mehany.Customecalss.TextViewWithFont
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_white"
        android:textSize="14sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/confirm4"
        />
    <atiaf.mehany.Customecalss.TextViewWithFont
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_white"
        android:textSize="15sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/confirm5"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>
    <atiaf.mehany.Customecalss.TextViewWithFont
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_white"
        android:textSize="18sp"
        android:layout_marginBottom="30dp"
        android:text="@string/confirm6"
        />
</LinearLayout>