<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/color_white"
    android:layout_marginBottom="15dp"
    android:id="@+id/lin2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="15dp" />
        <atiaf.mehany.Customecalss.TextViewWithFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="6pt"
            android:text="@string/worknot4"
            android:layout_marginStart="15dp"
            android:textColor="@color/color_back_dark"/>
        <atiaf.mehany.Customecalss.TextViewWithFont
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="6pt"
            android:text="@string/worknot5"
            android:layout_marginStart="15dp"
            android:textColor="@color/color_back_dark"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:id="@+id/img2"/>
            <atiaf.mehany.Customecalss.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/name2"
                android:textSize="8pt"
                android:textColor="@color/color_back_dar"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <atiaf.mehany.Customecalss.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order10"
                android:textSize="8pt"
                android:textColor="@color/color_back_dark"/>
            <atiaf.mehany.Customecalss.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order4"
                android:layout_marginStart="10dp"
                android:id="@+id/sertype2"
                android:textSize="8pt"
                android:textColor="@color/color_grey"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <atiaf.mehany.Customecalss.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/worknot2"
                android:textSize="8pt"
                android:textColor="@color/color_back_dark"/>
            <atiaf.mehany.Customecalss.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order4"
                android:layout_marginStart="10dp"
                android:id="@+id/details2"
                android:textSize="8pt"
                android:textColor="@color/color_grey"/>
        </LinearLayout>
        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_face"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/cancel"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">
            <atiaf.mehany.Customecalss.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/worknot6"
                android:layout_gravity="center"
                android:textSize="8pt"
                android:textColor="@color/color_white"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.cardview.widget.CardView>