<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        android:id="@+id/custom_toolbar_content"
        layout="@layout/custom_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_filter_list"
        android:layout_width="0dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_toolbar_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_all"
            android:layout_width="0dp"
            android:text="@string/all_teams"
            android:layout_weight="1"
            android:checked="true"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:checked="false"
            android:id="@+id/rb_my_teams"
            android:layout_width="0dp"
            android:text="@string/my_teams"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rb_joined_team"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/joined_team"
            android:layout_height="wrap_content"/>


    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_all_places"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        tools:itemCount="10"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        tools:listitem="@layout/place_row_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_filter_list" />

    <atiaf.mehany.Customecalss.TextViewWithFont
        android:id="@+id/no_data_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:text="@string/no_data_found"
        android:textColor="@color/color_black"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_toolbar_content" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:id="@+id/btn_create_new_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/more"
        android:tint="@color/color_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>